Bug 527018 - [refactoring] Replace use of Number constructors by valueOf
Change-Id: I67272d54f503635c460ccf382322ac4487933f71
Signed-off-by: Karsten Thoms <karsten.thoms@itemis.de>