@@ -66,7 +66,7 @@ public class SignedIntegerRendering extends AbstractIntegerRendering {
 			return bigRet.toString();
 		}
 
-		ret = new Long(result).toString();
+		ret = Long.valueOf(result).toString();
 
 		return ret;
 	}
